--- a/EjemploBD/nbproject/project.properties
+++ b/EjemploBD/nbproject/project.properties
@@ -50,7 +50,8 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -73,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EjemploBD
-main.class=paquete01.Enlace
+main.class=VIEW.TestEstudiante
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
